--- a/Style.css
+++ b/Style.css
@@ -9,7 +9,7 @@
     border-width: 5px;
     border-style: groove;
     border-color:black white;
-    width: 600px;
+    width: 100%;
     background-color:#333;
        
 }
